--- a/index.html
+++ b/index.html
@@ -78,12 +78,13 @@
 
 <body>
     <div class="profile-container">
-        <div class="profile-image"></div>
+        <div class="profile-image" role="img" aria-label="Desenho de perfil de Janio Melo"></div>
         <h1>Janio Melo</h1>
         <p>Com 10 anos de experiência no desenvolvimento de softwares comerciais, tenho dedicado minha carreira a criar
-            soluções tecnológicas inovadoras para entidades do terceiro setor. Atualmente, coordeno produtos na 
+            soluções tecnológicas inovadoras para entidades do terceiro setor. Atualmente, coordeno a área de produtos na 
             <a href="https://mandua.com.br" target="_blank" rel="noopener noreferrer">Mandua Tecnologia</a>, 
             buscando sempre gerar impacto social positivo através da tecnologia.</p>
+        <p><a href="https://github.com/janiomelo/janiomelo.dev" target="_blank">Código no GitHub</a></p>
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/janio-melo-a5765199/" target="_blank" rel="noopener noreferrer">
                 
