correções de acessibilidade

--- a/index.html
+++ b/index.html
@@ -82,9 +82,9 @@
         <h1>Janio Melo</h1>
         <p>Com 10 anos de experiência no desenvolvimento de softwares comerciais, tenho dedicado minha carreira a criar
             soluções tecnológicas inovadoras para entidades do terceiro setor. Atualmente, coordeno a área de produtos na 
-            <a href="https://mandua.com.br" target="_blank" rel="noopener noreferrer">Mandua Tecnologia</a>, 
+            <a aria-label="Abre o site da Manduá" href="https://mandua.com.br" target="_blank" rel="noopener noreferrer">Mandua Tecnologia</a>, 
             buscando sempre gerar impacto social positivo através da tecnologia.</p>
-        <p><a href="https://github.com/janiomelo/janiomelo.dev" target="_blank">Código no GitHub</a></p>
+        <p><a aria-label="Abre o repositório do github" href="https://github.com/janiomelo/janiomelo.dev" target="_blank">Código no GitHub</a></p>
         <div class="social-icons">
             <a href="https://www.linkedin.com/in/janio-melo-a5765199/" target="_blank" rel="noopener noreferrer" aria-label="Abre meu perfil no site linkedin">
                 
